--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     body {
   font-family: "Roboto", "Arial", sans-serif;
-  background-color: #f8f8f8; /* Add a background color */
+  background-color: #ffffff; /* Add a background color */
 }
 
     * {
@@ -44,7 +44,7 @@
 
     .logo {
       order: 1;
-      width: 100px;
+      width: 75px;
       /* Adjust the width as needed */
     }
 
@@ -64,7 +64,7 @@
     .mid-section form {
       display: flex;
       height: 40px;
-      width: 300px;
+      width: 275px;
       align-items: center;
       justify-content: center;
     }
